# job-market-pipeline

./: .env.example  .gitignore  .secrets.baseline  IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  README.md  prefect.yaml  pyproject.toml  run_local.py
.github/workflows/: deploy.yml  pr-checks.yml
config/: settings.py
deployment/: deploy.py  notify_deploy.py
flows/: job_pipeline.py
scripts/: check.py
sql/: bronze_schema.sql  gold_refresh_fn.sql  gold_schema.sql  rls_policies.sql  silver_schema.sql
tasks/: aggregate_jobs.py  extract_jobs.py  load_supabase.py  notify.py  transform_jobs.py
tests/: test_transform.py
